src/user_agent.css
/* User Agent Stylesheet - Default browser styles */

/* Document structure */
html {
    display: block;
}
body {
    display: block;
    margin: 8px;
}

/* Links */
a:link {
    color: rgb(0, 0, 238);
    text-decoration: underline;
    cursor: pointer;
}

a:visited {
    color: rgb(85, 26, 139);
}

a:active {
    color: rgb(255, 0, 0);
}

a:hover {
    color: rgb(255, 0, 0);
}

a:focus {
    outline: 1px dotted rgb(0, 0, 0);
    outline-offset: 2px;
}

/* HTML5 semantic elements */
main, article, section, header, footer, nav, aside, figure, figcaption {
    display: block;
}

/* Headings */
h1 {
    display: block;
    font-size: 2em;
    font-weight: bolder;
    margin-top: 0.67em;
    margin-bottom: 0.67em;
}

h2 {
    display: block;
    font-size: 1.5em;
    font-weight: bolder;
    margin-top: 0.83em;
    margin-bottom: 0.83em;
}

h3 {
    display: block;
    font-size: 1.17em;
    font-weight: bolder;
    margin-top: 1em;
    margin-bottom: 1em;
}

h4 {
    display: block;
    font-size: 1em;
    font-weight: bolder;
    margin-top: 1.33em;
    margin-bottom: 1.33em;
}

h5 {
    display: block;
    font-size: 0.83em;
    font-weight: bolder;
    margin-top: 1.67em;
    margin-bottom: 1.67em;
}

h6 {
    display: block;
    font-size: 0.67em;
    font-weight: bolder;
    margin-top: 2.33em;
    margin-bottom: 2.33em;
}

/* Text blocks */
p {
    display: block;
    margin-top: 1em;
    margin-bottom: 1em;
}

/* Lists */
ul, ol {
    display: block;
    margin-top: 1em;
    margin-bottom: 1em;
    padding-left: 40px;
}

ul {
    list-style-type: disc;
    counter-reset: list-item;
}

ol {
    list-style-type: decimal;
    counter-reset: list-item;
}

li {
    display: list-item;
    counter-increment: list-item;
}

menu, dir {
    display: block;
    margin-top: 1em;
    margin-bottom: 1em;
    padding-left: 40px;
    list-style-type: disc;
}

dd {
    margin-left: 40px;
}

/* Obsolete center element */
center {
    display: block;
    text-align: center;
}
center > * {
    text-align: center;
}
center > table,
center > div,
center > blockquote,
center > pre,
center > ul,
center > ol,
center > form,
center > p,
center > section,
center > article,
center > main {
    margin-left: auto;
    margin-right: auto;
}

/* Block elements */
div, header, footer, section, article, nav, aside, main, form {
    display: block;
}

blockquote {
    display: block;
    margin-top: 1em;
    margin-bottom: 1em;
    margin-left: 40px;
    margin-right: 40px;
}

pre {
    display: block;
    font-family: monospace;
    white-space: pre;
    margin-top: 1em;
    margin-bottom: 1em;
}

/* Tables */
table {
    display: table;
    border-collapse: separate;
    border-spacing: 2px;
}

caption {
    display: table-caption;
    caption-side: top;
}
colgroup {
    display: table-column-group;
}

col {
    display: table-column;
}

thead {
    display: table-header-group;
}

tbody {
    display: table-row-group;
}

tfoot {
    display: table-footer-group;
}

tr {
    display: table-row;
}

td, th {
    display: table-cell;
    padding: 1px;
    vertical-align: middle;
}

th {
    font-weight: bolder;
    text-align: center;
}

/* Inline elements */
span, a, strong, em, b, i, u, small, mark, code, big, sub, sup {
    display: inline;
}

strong, b {
    font-weight: bold;
}

bdi {
    unicode-bidi: isolate;
}

bdo {
    unicode-bidi: bidi-override;
}

em, i, address, cite, dfn, var {
    font-style: italic;
}

u {
    text-decoration: underline;
}

small {
    font-size: smaller;
}

big {
    font-size: larger;
}

sub {
    font-size: smaller;
    vertical-align: sub;
}

sup {
    font-size: smaller;
    vertical-align: super;
}

/* Ruby layout */
ruby {
    display: ruby;
    ruby-position: over;
    ruby-align: center;
}
rb {
    display: ruby-base;
}
rt {
    display: ruby-text;
    font-size: 0.5em;
    line-height: 1;
}
rtc {
    display: ruby-text-container;
}
rp {
    display: none;
}

mark {
    background-color: yellow;
    color: black;
}

ins {
    text-decoration: underline;
}

del, s, strike {
    text-decoration: line-through;
}

q {
    quotes: "“" "”" "‘" "’";
}

abbr[title], acronym[title] {
    border-bottom-width: 1px;
    border-bottom-style: dotted;
    border-bottom-color: currentColor;
    cursor: help;
}

a[href] {
    color: rgb(0, 0, 238);
    text-decoration: underline;
    cursor: pointer;
}

nobr {
    white-space: nowrap;
}

code, kbd, samp, tt {
    font-family: monospace;
}

/* Replaced elements */
img,
video,
canvas,
iframe,
object,
embed {
    overflow: clip;
}

/* SVG defaults */
svg {
    overflow: hidden;
}

/* Form elements */
input, textarea, select, button {
    display: inline-block;
    padding: 4px 6px;
    border: 1px solid #767676;
    background-color: white;
    color: black;
    font-family: inherit;
    font-size: inherit;
    line-height: 1.2;
    border-radius: 4px;
}

input[type="text"], input[type="password"], input[type="email"],
input[type="search"], input[type="tel"], input[type="url"],
input:not([type]) {
    padding: 4px 6px;
}

input[type="submit"], input[type="button"], button {
    padding: 4px 10px;
    background-color: white;
    border: 1px solid #767676;
}

textarea {
    white-space: pre-wrap;
    min-height: 3em;
}

select {
    padding-right: 20px;
}

input[type="checkbox"], input[type="radio"] {
    width: 16px;
    height: 16px;
    padding: 0;
    border-radius: 3px;
    vertical-align: middle;
}

input[type="radio"] {
    border-radius: 50%;
}

input[type="hidden"] {
    display: none;
}

input:focus,
textarea:focus,
select:focus,
button:focus {
    outline: 1px dotted rgb(0, 0, 0);
    outline-offset: 2px;
}

input:disabled,
textarea:disabled,
select:disabled,
button:disabled {
    color: gray;
    background-color: rgb(240, 240, 240);
    border-color: rgb(192, 192, 192);
    cursor: default;
}

option:disabled,
optgroup:disabled {
    color: gray;
    cursor: default;
}

option {
    display: block;
    white-space: pre;
}

optgroup {
    display: block;
    white-space: pre;
    font-weight: bold;
}

fieldset {
    display: block;
    margin: 0.35em 2px 0.625em;
    padding: 0.35em 0.75em 0.625em;
    border: 2px groove #c0c0c0;
}

legend {
    display: block;
    padding-left: 2px;
    padding-right: 2px;
}

details {
    display: block;
}

summary {
    display: list-item;
    cursor: pointer;
    list-style: disclosure-closed outside;
}

details[open] > summary {
    list-style-type: disclosure-open;
}

details:not([open]) > :not(summary) {
    display: none;
}

/* Dialogs and popovers */
dialog {
    display: block;
    position: fixed;
    inset: 0;
    margin: auto;
    padding: 1em;
    border: 1px solid rgb(192, 192, 192);
    background: white;
    color: black;
}

dialog:not([open]) {
    display: none;
}

dialog[data-fastr-modal="true"]::backdrop {
    background: rgba(0, 0, 0, 0.4);
}

*:where([popover]) {
    position: fixed;
    inset: auto;
    padding: 0.5em 1em;
    border: 1px solid rgb(192, 192, 192);
    background: white;
    color: black;
}

*:where([popover]):not([open]) {
    display: none;
}

/* Hidden elements - these should not be rendered */
head, style, script, meta, link, title, template {
  display: none;
}

[hidden] {
  display: none;
}

/* Horizontal rule */
hr {
    display: block;
    box-sizing: content-box;
    height: 1px;
    margin: 0.5em auto;
    color: gray;
    border: 1px inset currentColor;
}

